Fix homepage misalignment

--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
 }
 
 .banner-textbox {
-    max-width: 700px;
+    max-width: 720px;
     /* min-width: 40%; */
     margin: 5px 20px;
     padding: 10px 15px 0;
